...
                                                <rect key="frame" x="0.0" y="8" width="180" height="38"/>
                                                <fontDescription key="fontDescription" name="PermanentMarker" family="Permanent Marker" pointSize="15"/>
                                                <state key="normal" title="Add New Profile"/>
                                                <state key="selected" title="Clear ⚤ or ⬆︎⬇︎">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="86" height="37"/>
                                                        <fontDescription key="fontDescription" name="PermanentMarker" family="Permanent Marker" pointSize="15"/>
                                                        <state key="normal" title="Male"/>
                                                        <connections>
                                                            <action selector="setUnsetMaleFilter:" destination="YIR-oY-Jct" eventType="touchUpInside" id="FR7-pg-ePB"/>
...
                                                        <rect key="frame" x="94" y="0.0" width="86" height="37"/>
                                                        <fontDescription key="fontDescription" name="PermanentMarker" family="Permanent Marker" pointSize="15"/>
                                                        <state key="normal" title="Female"/>
                                                        <connections>
                                                            <action selector="setUnsetFemaleFilter:" destination="YIR-oY-Jct" eventType="touchUpInside" id="clH-DA-DGy"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rYj-Hk-So9">
                                                        <rect key="frame" x="0.0" y="0.0" width="86" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="AgeSort"/>
                                                        <fontDescription key="fontDescription" name="PermanentMarker" family="Permanent Marker" pointSize="15"/>
                                                        <state key="normal" title="Age ⬆︎"/>
                                                        <connections>
                                                            <action selector="setUnsetAgeSort:" destination="YIR-oY-Jct" eventType="touchUpInside" id="O0u-Di-hkx"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqQ-wc-xUN">
                                                        <rect key="frame" x="94" y="0.0" width="86" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NameSort"/>
                                                        <fontDescription key="fontDescription" name="PermanentMarker" family="Permanent Marker" pointSize="15"/>
                                                        <state key="normal" title="Name ⬇︎"/>
                                                        <connections>
                                                            <action selector="setUnsetNameSort:" destination="YIR-oY-Jct" eventType="touchUpInside" id="Xf1-aa-5IF"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="286" height="286"/>
                                                <subviews>
                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="tQJ-ux-W6K">
                                                        <rect key="frame" x="0.0" y="0.0" width="286" height="286"/>
                                                        <constraints>
...
                                                        <rect key="frame" x="20" y="0.0" width="68.5" height="136.5"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDh-RY-Szm">
                                                                <rect key="frame" x="0.0" y="0.0" width="68.5" height="28"/>
                                                                <fontDescription key="fontDescription" name="PoetsenOne-Regular" family="PoetsenOne" pointSize="17"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWo-Tf-QXA">
                                                                <rect key="frame" x="0.0" y="36" width="68.5" height="28.5"/>
                                                                <fontDescription key="fontDescription" name="PoetsenOne-Regular" family="PoetsenOne" pointSize="17"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6bU-qi-qoh">
                                                                <rect key="frame" x="0.0" y="72.5" width="68.5" height="28"/>
                                                                <fontDescription key="fontDescription" name="PoetsenOne-Regular" family="PoetsenOne" pointSize="17"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="760" text="Hobbies:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConst
                                                                <rect key="frame" x="0.0" y="108.5" width="68.5" height="28"/>
                                                                <fontDescription key="fontDescription" name="PoetsenOne-Regular" family="PoetsenOne" pointSize="17"/>
...
